--- a/index.html
+++ b/index.html
@@ -1,13 +1,70 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visua</title>
+    <link rel="stylesheet" href="src/style.css">
+</head>
+<body>
+    <header>
+        <h1>Visua</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="sobre" class="intro">
+        <h2>Sobre Nós</h2>
+        <img src="src/assets/Logo 2.1.png" class="perfil">
+        <p>Visua é uma aplicação para pessoas com deficiência visual onde você pode escanear objetos ou códigos de barras ao seu redor para receber descrições detalhadas em áudio e em texto, permitindo uma experiência mais inclusiva e independente.</p>
+        <p>Explore o mundo ao seu redor com confiança graças à tecnologia do Visua, tornando a informação visual acessível a todos.</p>
+    </section>
+
+    <section id="projetos" class="galeria">
+        <h2>Meus Projetos</h2>
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="src/assets/Sobre.png" alt="Projeto 1">
+                <p>Projeto 1: Website</p>
+            </div>
+            <div class="grid-item">
+                <img src="src/assets/Splash Screen.png" alt="Projeto 2">
+                <p>Projeto 2: Aplicativo</p>
+            </div>
+            <div class="grid-item">
+                <img src="src/assets/Splash Screen 1 - Smartwatch.png" alt="Projeto 3">
+                <p>Projeto 3: Smartwatch</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+      <p>Entre em contato: <a href="mailto:visua@gmail.com">Visua.webapp@gmail.com</a></p>
+      <div class="social-links">
+          <a href="https://www.behance.net/visuaapp" target="_blank" class="social-button">
+              <img src="src/assets/behance.png" alt="Behance" />
+              Behance
+          </a>
+          <a href="https://github.com/Visua-inc/Visua-Web" target="_blank" class="social-button">
+              <img src="src/assets/github.png" alt="GitHub" />
+              GitHub
+          </a>
+          <a href="https://www.instagram.com/visua.app?igsh=MTAyMm82NGtqeGJ0bA==" target="_blank" class="social-button">
+              <img src="src/assets/instagram.png" alt="Instagram" />
+              Instagram
+          </a>
+          <a href="https://visuaweb.vercel.app" target="_blank" class="social-button">
+              <img src="src/assets/Logo 2.1.png" alt="webapp" />
+              WebApp
+          </a>
+      </div>
+      <p>© 2024 Visua. Todos os direitos reservados.</p>
+  </footer>
+  
+  
+</body>
 </html>
