--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </nav>
     </header>
 
-    <section id="sobre" class="intro">
+    <section style="margin-bottom: 20px;" id="sobre" class="intro">
         <img src="src/assets/Logo 2.1.png" class="perfil">
         <h2>Sobre Nós</h2>
         <p>Visua é uma aplicação para pessoas com deficiência visual onde você pode escanear objetos ou códigos de barras ao seu redor para receber descrições detalhadas em áudio e em texto, permitindo uma experiência mais inclusiva e independente.</p>
         <p>Explore o mundo ao seu redor com confiança graças à tecnologia do Visua, tornando a informação visual acessível a todos.</p>
     </section>
 
-    <section id="projetos" class="galeria">
+    <section style="margin-bottom: 20px;" id="projetos" class="galeria">
         <h2>Meus Projetos</h2>
         <div class="grid-container">
             <div class="grid-item">
