minor changes / grid fix / layout fix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <h2>Meus Projetos</h2>
         <div class="grid-container">
             <div class="grid-item">
-                <img src="src/assets/Sobre.png" alt="Projeto 1">
+                <a href="https://remarkable-blancmange-895ad4.netlify.app/" target="_blank">
+                    <img src="src/assets/Sobre.png" alt="Projeto 1">
+                </a>
                 <p>Projeto 1: Website</p>
             </div>
             <div class="grid-item">
@@ -43,26 +45,26 @@
     </section>
 
     <footer>
-      <p>Entre em contato: <a href="mailto:visua@gmail.com">Visua.webapp@gmail.com</a></p>
       <div class="social-links">
           <a href="https://www.behance.net/visuaapp" target="_blank" class="social-button">
-              <img src="src/assets/behance.png" alt="Behance" />
+              <img src="src/assets/behance.png" alt="Logo" />
               Behance
           </a>
           <a href="https://github.com/Visua-inc/Visua-Web" target="_blank" class="social-button">
-              <img src="src/assets/github.png" alt="GitHub" />
+              <img src="src/assets/github.png" alt="Logo" />
               GitHub
           </a>
           <a href="https://www.instagram.com/visua.app?igsh=MTAyMm82NGtqeGJ0bA==" target="_blank" class="social-button">
-              <img src="src/assets/instagram.png" alt="Instagram" />
+              <img src="src/assets/instagram.png" alt="Logo" />
               Instagram
           </a>
           <a href="https://visuaweb.vercel.app" target="_blank" class="social-button">
-              <img src="src/assets/Logo 2.1.png" alt="webapp" />
+              <img src="src/assets/Logo 2.1.png" alt="Logo"/>
               WebApp
           </a>
       </div>
       <p>© 2024 Visua. Todos os direitos reservados.</p>
+      <p>Entre em contato: <a href="mailto:visua@gmail.com">Visua.webapp@gmail.com</a></p>
   </footer>
   
   
