--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <img src="src/assets/instagram.png" alt="Logo" />
               Instagram
           </a>
-          <a href="https://visuaweb.vercel.app" target="_blank" class="social-button">
+          <a href="https://remarkable-blancmange-895ad4.netlify.app/" target="_blank" class="social-button">
               <img src="src/assets/Logo 2.1.png" alt="Logo"/>
               WebApp
           </a>
