--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Instagram
           </a>
           <a href="https://remarkable-blancmange-895ad4.netlify.app/" target="_blank" class="social-button">
-              <img src="src/assets/Logo 2.1.png" alt="Logo"/>
+              <img src="src/assets/logo 3 2.png" alt="Logo"/>
               WebApp
           </a>
       </div>
